--- a/project.html
+++ b/project.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>To Do List</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="project.css">
 </head>
 <body>
 
@@ -16,6 +16,6 @@
     <ul id="taskList"></ul>
 </div>
 
-<script src="script.js"></script>
+<script src="project.js"></script>
 </body>
 </html>
